--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "4.6",
+    "chart.js": "^3.7.0",
+    "chartkick": "^4.1.1",
     "jquery": "^3.6.0",
     "mapbox-gl": "^2.6.1",
     "popper.js": "^1.16.1",
