--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "4.6",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "chartkick": "^4.1.1",
     "jquery": "^3.6.0",
