updated popper.js version to 1.16.1

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/list": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
-    "@popperjs/core": "^2.11.0",
+    "@popperjs/core": "^2.11.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -18,6 +18,7 @@
     "chartkick": "^4.1.1",
     "jquery": "^3.6.0",
     "mapbox-gl": "^2.6.1",
+    "popper.js": "^1.16.1",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
